three.js 有error bug

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <head>
     <title>Sikako-deer</title>
     <meta charset="utf8">
-    <link rel="stylesheet" href="index.css">
+    <meta name="vieewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/deer.css">
   </head>
   <body>
+    <div class="scene"></div>
+
+
+
     <section>
       <div><img src="./pictures/1.jpg"></div>
       <div><img src="./pictures/2.jpg"></div>
@@ -14,8 +20,12 @@
       <div><img src="./pictures/4.jpg"></div>
       <div><img src="./pictures/5.jpg"></div>
       <div><img src="./pictures/6.jpg"></div>
+      <div id="travel">travel</div>
     </section>
+    
 
-
+    <script src="./js/three.js"></script>
+    <script src="./js/GLTFLoader.js"></script>
+    <script src="./js/deer.js"></script>
   </body>
 </html>
