--- a/index.html
+++ b/index.html
@@ -6,13 +6,38 @@
     <meta charset="utf8">
     <meta name="vieewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/deer.css">
+    <script>
+      function includeHTML() {
+        var z, i, elmnt, file, xhttp;
+        /*loop through a collection of all HTML elements:*/
+        z = document.getElementsByTagName("*");
+        for (i = 0; i < z.length; i++) {
+          elmnt = z[i];
+          /*search for elements with a certain atrribute:*/
+          file = elmnt.getAttribute("w3-include-html");
+          if (file) {
+            /*make an HTTP request using the attribute value as the file name:*/
+            xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+              if (this.readyState == 4) {
+                if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+                if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+                /*remove the attribute, and call this function once more:*/
+                elmnt.removeAttribute("w3-include-html");
+                includeHTML();
+              }
+            }      
+            xhttp.open("GET", file, true);
+            xhttp.send();
+            /*exit the function:*/
+            return;
+          }
+        }
+      };
+      </script>
   </head>
   <body>
-    <div class="scene"></div>
-
-
-
+    <div w3-include-html="./kuonlun.html"></div>
     <section>
       <div><img src="./pictures/1.jpg"></div>
       <div><img src="./pictures/2.jpg"></div>
@@ -22,10 +47,9 @@
       <div><img src="./pictures/6.jpg"></div>
       <div id="travel">travel</div>
     </section>
-    
 
-    <script src="./js/three.js"></script>
-    <script src="./js/GLTFLoader.js"></script>
-    <script src="./js/deer.js"></script>
+
+    <script>includeHTML();</script>
+    
   </body>
 </html>
