--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <div><img src="./pictures/4.jpg"></div>
       <div><img src="./pictures/5.jpg"></div>
       <div><img src="./pictures/6.jpg"></div>
-      <div id="travel">travel</div>
+      <div class="travel" style="--i:1">travel</div>
+      <div class="travel" style="--i:2">travel</div>
+      <div class="travel" style="--i:3">travel</div>
     </section>
 
 
