--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-
 <html
   <head>
     <title>Sikako-deer</title>
     <meta charset="utf8">
     <meta name="vieewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/kuonlun.css">
     <script>
       function includeHTML() {
         var z, i, elmnt, file, xhttp;
@@ -34,10 +34,25 @@
           }
         }
       };
-      </script>
+    </script>
   </head>
   <body>
-    <div w3-include-html="./kuonlun.html"></div>
+    <div class="container">
+      <div class="box">
+        <span style="--i:1;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:2;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:3;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:4;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:5;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:6;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:7;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:8;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:9;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:10;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:11;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+        <span style="--i:12;"><i>Sikako</i>'s <i>W</i>ebsite</span>
+      </div>
+    </div>
     <svg version="1.2" baseProfile="tiny" id="deer"
     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595.28 841.89"
     overflow="visible" xml:space="preserve">
@@ -608,7 +623,7 @@
       <div class="travel" style="--i:3">travel</div>
     </section>
 
-    <script>includeHTML();</script>
+    <!-- <script>includeHTML();</script> -->
     
   </body>
 </html>
